# aginika_object_georelation

./: CMakeLists.txt  package.xml
include/aginika_object_georelation/: aginika_object_georelation.h  aginika_object_georelation_solver.h  in_relation.h  on_relation.h  over_relation.h  template_relation.h
launch/: octomap_mapping.launch
src/: aginika_object_georelation.cpp  aginika_object_georelation_solver.cpp  in_relation.cpp  on_relation.cpp  over_relation.cpp  template_relation.cpp
test/: test_aginika_object_georelation_solver.cpp
